--- a/TranslationReg/Views/Languages/Create.cshtml
+++ b/TranslationReg/Views/Languages/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TranslationRegistryModel.Language
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Добавление";
 }
 
-<h2>Добавить язык</h2>
+<h2>Добавление языка</h2>
 
 
 @using (Html.BeginForm()) 
@@ -32,14 +32,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Назад к списку", "Index",null, htmlAttributes:new {@class = "btn btn-sm glyphicon glyphicon-chevron-left" })
+    @Html.ActionLink("Назад к списку", "Index")
 </div>
 
 @section Scripts {
