--- a/TranslationReg/Views/Projects/Create.cshtml
+++ b/TranslationReg/Views/Projects/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model TranslationRegistryModel.Project
+﻿@model TranslationReg.Models.ProjectModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Создание проекта";
 }
 
 <h2>Добавить проект</h2>
@@ -15,34 +15,42 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Name,"Название", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model,"Название", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("OriginalLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.OriginalLanguageId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.FinalLanguageId, "Перевести на", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Project.WordsNumber, "Количество слов", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("FinalLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FinalLanguageId, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Project.WordsNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Project.WordsNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WordsNumber, "Количество слов", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Project.WordsNumber, "Заказчик", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.WordsNumber, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Project.Customer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Project.Customer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.WordsNumber, "Заказчик", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Project.Customer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Project.Customer, "", new { @class = "text-danger" })
             </div>
         </div>
 
