--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -25,18 +25,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("OriginalLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.OriginalLanguageId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FinalLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LanguagePairId, "Языковая пара", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("FinalLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FinalLanguageId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.LanguagePairId, "", new { @class = "text-danger" })
             </div>
         </div>
 
