--- a/TranslationReg/Views/Projects/Create.cshtml
+++ b/TranslationReg/Views/Projects/Create.cshtml
@@ -39,7 +39,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Project.WordsNumber, "Заказчик", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Project.Customer, "Заказчик", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Project.Customer, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Project.Customer, "", new { @class = "text-danger" })
@@ -47,10 +47,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Project.WordsNumber, "Заказчик", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Project.ProjectStatuseId, "Статус", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Project.Customer, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Project.Customer, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Project.ProjectStatuseId, "", new { @class = "text-danger" })
             </div>
         </div>
 
