--- a/TranslationReg/Views/Projects/Details.cshtml
+++ b/TranslationReg/Views/Projects/Details.cshtml
@@ -12,19 +12,11 @@
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.LabelFor(model => model.OriginalLanguage.Name,"Язык оригинала")
+            @Html.LabelFor(model => model.LanguagePair.Name,"Языковая пара")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.OriginalLanguage.Name)
-        </dd>
-        
-        <dt>
-            @Html.LabelFor(model => model.FinalLanguage.Name,"Язык перевода")
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FinalLanguage.Name)
+            @Html.DisplayFor(model => model.LanguagePair.Name)
         </dd>
 
         <dt>
@@ -33,6 +25,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.WordsNumber)
+        </dd>
+
+        <dt>
+            @Html.LabelFor(model => model.Customer, "Заказчик")
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Customer)
+        </dd>
+
+        <dt>
+            @Html.LabelFor(model => model.Creator.Name, "Создатель")
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Creator.Name)
         </dd>
 
     </dl>
@@ -56,7 +64,7 @@
                 </td>
 
                 <td>
-                    @Html.ActionLink("Скачать", "Download",     "Documents", new { @filepath = item.Path }, htmlAttributes: new { @class = "btn btn-success" })|
+                    @Html.ActionLink("Скачать", "Download",     "Documents", new { @filepath = item.OriginalFile.Path }, htmlAttributes: new { @class = "btn btn-success" })|
                     @Html.ActionLink("Редактировать", "Edit",   "Documents", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
                     @Html.ActionLink("Подробно", "Details",     "Documents", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-info" })
                     @Html.ActionLink("Удалить", "Delete",       "Documents", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
