--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -14,18 +14,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Document.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.document.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.document.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Document.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Document.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Document.ProjectId, "Проект", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => Model.document.ProjectId, Model.projects, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.document.ProjectId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -37,11 +37,13 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Файл перевода", new { @class = "control-label col-md-2" })
+            @Html.Label("Конечный файл (*если готов)", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="originalFile" />
+                <input type="file" name="finalFile" />
             </div>
         </div>
+
+        @Html.Partial("")
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
