--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -16,8 +16,8 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.OwnerId)
-        @Html.HiddenFor(model => model.FileId)
-        @Html.HiddenFor(model => model.FileId1)
+        @Html.HiddenFor(model => model.OriginalFileId)
+        @Html.HiddenFor(model => model.FinalFileId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
