--- a/TranslationReg/Views/Languages/Index.cshtml
+++ b/TranslationReg/Views/Languages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TranslationRegistryModel.Language>
+﻿@model TranslationReg.Models.LanguagesModel
 
 @{
     ViewBag.Title = "Языки";
@@ -20,19 +20,56 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShortName)
-        </td>
-        <td>
-            @Html.ActionLink("Редактировать",   "Edit",     new { id=item.Id }, htmlAttributes: new { @class = "btn btn-primary"})
-            @Html.ActionLink("Удалить",         "Delete",   new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model.languages) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ShortName)
+            </td>
+            <td>
+                @Html.ActionLink("Редактировать",   "Edit",     new { id=item.Id }, htmlAttributes: new { @class = "btn btn-primary"})
+                @Html.ActionLink("Удалить",         "Delete",   new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+            </td>
+        </tr>
+    }
+</table>
 
+<h2>Языковые пары</h2>
+<p>
+    @Html.ActionLink("Добавить (мулька)", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.Label("Язык оригинала")
+        </th>
+        <th>
+            @Html.Label("Язык перевода")
+        </th>
+        <th>
+            @Html.Label("Отображаемое наименование")
+        </th>
+        <th></th>
+    </tr>
+    @foreach (var item in Model.languagePairs)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.OriginalLanguage.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TranslationLanguage.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Редактировать (мулька)", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
+                @Html.ActionLink("Удалить (мулька)", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+            </td>
+
+        </tr>
+    }
 </table>
