--- a/TranslationReg/Views/Languages/Details.cshtml
+++ b/TranslationReg/Views/Languages/Details.cshtml
@@ -1,34 +1,33 @@
-﻿@model TranslationRegistryModel.Language
+﻿<div class="dialogForm">
+    @model TranslationRegistryModel.Language
 
-@{
-    ViewBag.Title = "Details";
-}
+    @{
+        ViewBag.Title = "Details";
+    }
 
-<h2>Details</h2>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-<div>
-    <h4>Language</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.ShortName)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShortName)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ShortName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ShortName)
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Назад к списку", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Назад к списку", "Index")
-</p>
