--- a/TranslationReg/Views/Languages/Index.cshtml
+++ b/TranslationReg/Views/Languages/Index.cshtml
@@ -3,11 +3,13 @@
 @{
     ViewBag.Title = "Языки";
 }
-
+<script src='@Url.Content("~/Scripts/jquery-1.12.4.min.js")' type="text/javascript"></script>
+<script src='@Url.Content("~/Scripts/jquery-ui-1.12.1.min.js")' type="text/javascript"></script>
 <h2>Языки</h2>
 
 <p>
-    @Html.ActionLink("Добавить", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
+    @Html.ActionLink("Добавить", "Create", null,
+        htmlAttributes: new { @class = "btn btn-success viewDialog", data_dialog_title = "Добавить запись" })
 </p>
 <table class="table">
     <tr>
@@ -20,7 +22,8 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model.languages) {
+    @foreach (var item in Model.languages)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -29,8 +32,10 @@
                 @Html.DisplayFor(modelItem => item.ShortName)
             </td>
             <td>
-                @Html.ActionLink("Редактировать",   "Edit",     new { id=item.Id }, htmlAttributes: new { @class = "btn btn-primary"})
-                @Html.ActionLink("Удалить",         "Delete",   new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+                @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, 
+                    htmlAttributes: new { @class = "btn btn-primary viewDialog", data_dialog_title = "Редактировать запись" })
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, 
+                    htmlAttributes: new { @class = "btn btn-danger viewDialog", data_dialog_title = "Удалить запись" })
             </td>
         </tr>
     }
@@ -53,6 +58,7 @@
         </th>
         <th></th>
     </tr>
+
     @foreach (var item in Model.languagePairs)
     {
         <tr>
@@ -66,10 +72,33 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
+                <a class="addEditForm" value="@item.Id"> тест</a>
                 @Html.ActionLink("Редактировать (мулька)", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
                 @Html.ActionLink("Удалить (мулька)", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
             </td>
-
         </tr>
     }
 </table>
+
+<script>
+    $(document).ready(function () {
+
+        $.ajaxSetup({ cache: false });
+
+        $(".viewDialog").on("click", function (e) {
+            e.preventDefault();
+
+            $("<div></div>")
+                .addClass("dialog")
+                .appendTo("body")
+                .dialog({
+                    height: 300,
+                    width: 500,
+                    title: $(this).attr("data-dialog-title"),
+                    close: function () { $(this).remove() },
+                    modal: true
+                })
+                .load(this.href);
+        });
+    });
+</script>
