--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -40,8 +40,10 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
