--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -17,25 +17,49 @@
         <th>
             @Html.Label("Языковая пара")
         </th>
-       
+
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LanguagePair.Name)
-        </td>
-      
-        <td>
-            @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
-            @Html.ActionLink("Подробно", "Details", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-info" })
-            @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Ajax.ActionLink(
+                       "Button1",
+                       "Details",
+                       new
+                       {
+                           id = item.Id
+                       },
+                       new AjaxOptions
+                       {
+                           UpdateTargetId = item.Id.ToString()
+                       }
+                  )
+                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@item.Id" href="/Projects/Details/@item.Id">
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                </a>
+            </td>
+
+
+        </tr>
+
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LanguagePair.Name)
+            </td>
+
+            <td>
+                @Html.ActionLink("Редактировать", "Edit", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-primary" })
+                @Html.ActionLink("Подробно", "Details", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-info", @data = @item.Id })
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id }, htmlAttributes: new { @class = "btn btn-danger" })
+            </td>
+        </tr>
+        <tr id="@(item.Id)"></tr>
+    }
 
 </table>
