--- a/TranslationReg/Views/Languages/Edit.cshtml
+++ b/TranslationReg/Views/Languages/Edit.cshtml
@@ -28,7 +28,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-5 col-md-10">
-                    <input type="submit" value="Сохранить" class="btn btn-default" />
+                    <input type="submit" value="Сохранить" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(Model.Id)" href="/Languages/Item/@Model.Id" class="btn btn-default" />
                 </div>
             </div>
         </div>
