--- a/TranslationReg/Views/LanguagePairs/Delete.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Delete.cshtml
@@ -1,13 +1,11 @@
-﻿    @model TranslationRegistryModel.Language
+﻿@model TranslationRegistryModel.LanguagePair
 <div>
-
     <h3>Вы уверены, что хотите удалить данную запись?</h3>
-    <hr />
     <div>
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.Label("Язык")
+                @Html.Label("Наименование")
             </dt>
 
             <dd>
@@ -15,11 +13,19 @@
             </dd>
 
             <dt>
-                @Html.Label("Сокращение")
+                @Html.Label("Язык оригинала")
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.ShortName)
+                @Html.DisplayFor(model => model.OriginalLanguage.Name)
+            </dd>
+
+            <dt>
+                @Html.Label("Язык перевода")
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.TranslationLanguage.Name)
             </dd>
 
         </dl>
@@ -29,15 +35,14 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Удалить" class="btn btn-danger" />
+                <input type="submit" value="Удалить" class="btn btn-danger"/>
             </div>
-
         }
     </div>
-
-    @* Для закрытия диалога (в нем открывается форма) id="closeDialog" и скрипт*@
-    <button type="button" class="ui-dialog-titlebar-close btn btn-info">Назад</button>
 </div>
+
+@* Для закрытия диалога (в нем открывается форма) id="closeDialog" и скрипт*@
+<button type="button" class="ui-dialog-titlebar-close btn btn-info">Назад</button>
 
 <script>
     $(document).ready(function () {
@@ -46,3 +51,4 @@
         });
     });
 </script>
+
