--- a/TranslationReg/Views/Languages/Index.cshtml
+++ b/TranslationReg/Views/Languages/Index.cshtml
@@ -1,100 +1,53 @@
 ﻿@model TranslationReg.Models.LanguagesModel
 
-@{
-    ViewBag.Title = "Языки";
-}
-<h2>Языки</h2>
+@Html.Partial("../Languages/List", Model.languages)
+@Html.Partial("../LanguagePairs/List", Model.languagePairs)
 
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguageForm" href="/Languages/Create" id="addLanguageBtn">
-    <span class="glyphicon glyphicon-plus"></span>
-</a>
-<div id="addLanguageForm" class="dynamicBlock"></div>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.Label("Наименование")
-        </th>
-        <th>
-            @Html.Label("Сокращение")
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model.languages)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShortName)
-            </td>
-            <td>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" href="/Languages/Edit/@item.Id" class="glyphicon glyphicon-edit langEditBtn editBtn"></a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" href="/Languages/Delete/@item.Id" class="glyphicon glyphicon-remove"></a>
-            </td>
-
-        </tr>
-        <tr class="table-light">
-            <td id="language@(item.Id)"  class="dynamicBlock"></td>
-        </tr>
-    }
-</table>
-
-<h2>Языковые пары</h2>
-
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm" href="/Languages/Create" id="addLanguageBtn">
-    <span class="glyphicon glyphicon-plus"></span>
-</a>
-<div id="addLanguagePairForm" class="dynamicBlock"></div>
-
-<table class="table">
-    <tr>
-        <th>
-            @Html.Label("Язык оригинала")
-        </th>
-        <th>
-            @Html.Label("Язык перевода")
-        </th>
-        <th>
-            @Html.Label("Отображаемое наименование")
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model.languagePairs)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OriginalLanguage.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TranslationLanguage.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Edit/@item.Id" class="glyphicon glyphicon-edit editBtn"></a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" href="/LanguagePairs/Delete/@item.Id" class="glyphicon glyphicon-remove"></a>
-            </td>
-        </tr>
-        <tr>
-            <td id="languagePair@(item.Id)" class="dynamicBlock"></td>
-        </tr>
-    }
-</table>
-<button id="toggle">Show</button>
 @section scripts {
-<script>
+    <script>
         $(document).ready(function () {
             $(".editBtn").click(function () {
                 $(this).toggleClass("glyphicon-edit");
                 $(this).toggleClass("glyphicon-arrow-up");
-                selector = $(this).attr("data-ajax-update");
-                $(selector).toggle();
+                // изначально display:none, описанов MyAppStyles.css
+                updatedBlock = $(this).attr("data-ajax-update");
+                $(updatedBlock).toggle();
             });
         });
-</script>
+
+        //$(document).ready(function () {
+        //    $(".deleteBtn").click(function () {
+        //        $(this).toggleClass("glyphicon-remove");
+        //        $(this).toggleClass("glyphicon-arrow-up");
+        //        // изначально display:none, описанов MyAppStyles.css
+        //        updatedBlock = $(this).attr("data-ajax-update");
+        //        $(updatedBlock).toggle();
+        //    });
+        //});
+
+        $(document).ready(function () {
+            $(".createBtn").click(function () {
+                $(this).toggleClass("glyphicon-remove");
+                $(this).toggleClass("glyphicon-arrow-up");
+                // изначально display:none, описанов MyAppStyles.css
+                updatedBlock = $(this).attr("data-ajax-update");
+                $(updatedBlock).toggle();
+            });
+        });
+
+        $(".deleteBtn").on("click", function (e) {
+            e.preventDefault();
+            $("<div></div>")
+                .addClass("dialog")
+                .appendTo("body")
+                .dialog({
+                    height: 300,
+                    width: 500,
+                    title: $(this).attr("data-dialog-title"),
+                    close: function () { $(this).remove() },
+                    modal: true
+                })
+                .load(this.href);
+        });
+    </script>
 }
