Игнорирование Uploads. Небольшие правки контроллеров, правки багов

--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -3,8 +3,7 @@
 <h2>Языковые пары</h2>
 
 <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm" 
-   href="/Languages/Create" class="glyphicon glyphicon-plus createBtn">
-</a>
+   href="/LanguagePairs/Create" class="glyphicon glyphicon-plus createBtn"></a>
 <div id="addLanguagePairForm" class="dynamicBlock"></div>
 
 <table class="table">
